# descriptor-mutable-test

./: .clang-format  CMakeLists.txt  README.md  descriptor-mutable-test.cpp  shader.vert
glfw-3.3.8/src/: init.c
